# FerretRAG

./: .gitignore  AGENTS.md  PROJECT_IDEA.md  README.md  ROADMAP.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: PRIVACY_CHECKLIST.md  QA_CHECKLIST.md  RELEASE_NOTES_RC.md
ferret_rag/: __init__.py  __main__.py
ferret_rag/api/: app.py
ferret_rag/core/: config.py  paths.py
ferret_rag/index/: __init__.py  chunking.py  loaders.py  store.py
ferret_rag/llm/: engine.py  gguf.py  gpu.py
ferret_rag/ui/: app.js  index.html  styles.css
requirements/: llm-cpu.txt
scripts/: build_windows.cmd  build_windows.ps1  check_llm.py  install_llm_runtime.py  run_dev.cmd  run_dev.ps1
tests/: test_api.py  test_chunking.py  test_config.py  test_gpu.py  test_llm_engine.py  test_loaders.py  test_store.py
