[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferret-rag"
version = "0.1.0"
description = "Privacy-first local RAG app for chatting with files in folders."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "chromadb>=0.5",
    "fastapi>=0.111",
    "openpyxl>=3.1",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
    "ruff>=0.5",
]
llm = [
    "llama-cpp-python>=0.2.90",
]

[project.scripts]
ferret-rag = "ferret_rag.__main__:main"

[tool.setuptools.packages.find]
include = ["ferret_rag*"]

[tool.setuptools.package-data]
ferret_rag = ["ui/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
